name:                game-in-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://localhost
license:             MIT
license-file:        LICENSE
author:              me
maintainer:          me@localhost
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18


executable game
  main-is:             game.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:       -Wall
  build-depends:       base >=4.7
                     , GLFW-b 
                     , gloss 
                     , gloss-rendering
                     , elerea
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable testFrp
  main-is:             testFrp.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:       -Wall
  build-depends:       base >=4.7
                     , elerea
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010


executable gameFrp
  main-is:             gameFrp.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:       -Wall
  build-depends:       base >=4.7
                     , GLFW-b 
                     , gloss 
                     , gloss-rendering
                     , elerea
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sokoban2
  main-is:             sokoban2.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:       -Wall
  build-depends:       base >=4.7
                     , GLFW-b 
                     , gloss 
                     , gloss-rendering
                     , elerea
                     , random
                     , transformers
                     , mtl
 hs-source-dirs:      src
  default-language:    Haskell2010

executable sokobanAscii
  main-is:             sokobanAscii.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:       -Wall
  build-depends:       base >=4.7
                     , GLFW-b 
                     , gloss 
                     , gloss-rendering
                     , elerea
                     , random
                     , transformers
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sokoban2Frp
  main-is:             sokoban2Frp.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:       -Wall
  build-depends:       base >=4.7
                     , GLFW-b 
                     , gloss 
                     , gloss-rendering
                     , elerea
                     , random
                     , transformers
                     , mtl
 hs-source-dirs:      src
  default-language:    Haskell2010


